--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -24,7 +24,7 @@ header > h1{
     padding-top: 50px;
     font-variant: small-caps;
     font-family: var(--fonte2);
-    font-size: 10vw;
+    font-size: 9vw;
 }
 header > p{
     padding-bottom: 50px;
@@ -43,7 +43,10 @@ section{
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: 3.5vw;
+    font-size: 3.2vw;
+}
+section > p{
+    padding-bottom: 1em;
 }
 section.normal{
     background-color: white;
@@ -52,11 +55,22 @@ section.normal{
 section.imagem{
     background-color: rgb(56, 51, 51);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover; 
+    background-attachment: fixed;
 }
 section.imagem > p{
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
+}
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;   
+}
+section#img02{
+    background-image: url('../imagens/background002.jpg');
 }
 footer{
     background-color: black;
